# nomadix-api

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
nseapi/: device.py  exceptions.py  types.py  utils.py
nseapi/command/: radius.py
nseapi/commands/: __init__.py  network.py  pms.py  radius.py  subscriber.py
nseapi/commands/options/: __init__.py  network.py  pms.py  radius.py  subscriber.py
tests/: conftest.py  test_commands.py  test_types.py
