[project]
name = "nseapi"
version = "0.0.1"
description = "Python API library for the Nomadix Service Engine"
authors = ["atomtr <thai.tr@hotmail.com>"]
keywords = ["nomadix-api", "nomadix", "api", "gateway", "nse"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.8.0"
xmltodict = "^0.13.0"
